downgrade requirements to Java 11